
  From Steven Knight:

  - Support the ability to subclass the new-style "str" class as input
    to Builders.

  - Improve the performance of our type-checking by using isinstance()
    with new-style classes.

  - Fix #include (and other $*PATH variables searches) of files with
    absolute path names.  Don't die if they don't exist (due to being
    #ifdef'ed out or the like).

  From Rob Managan:

  - Enhance TeX and LaTeX support to work with BuildDir(duplicate=0).

  - Re-run LaTeX when it issues a package warning that it must be re-run.

  From Jonas Olsson:

  - Fix use of the Intel C compiler when the top compiler directory,
    but not the compiler version, is specified.

  - Handle Intel C compiler network license files (port@system).

  From Adam Simpkins:

  - Add a --interactive option that starts a session for building (or
    cleaning) targets without re-reading the SConscript files every time.

  - Fix use of readline command-line editing in --interactive mode.

  From Ben Webb:

  - Support the SWIG %module statement with following modifiers in
    parenthese (e.g., '%module(directors="1")').



RELEASE 0.97.0d20071212 - Wed, 12 Dec 2007 09:29:32 -0600

  From Benoit Belley:

  - Fix occasional spurious rebuilds and inefficiency when using
    --implicit-cache and Builders that produce multiple targets.

  - Allow SCons to not have to know about the builders of generated
    files when BuildDir(duplicate=0) is used, potentially allowing some
    SConscript files to be ignored for smaller builds.

  From David Cournapeau:

  - Add a CheckTypeSize() call to configure contexts.

  From Ken Deeter:

  - Make the "contents" of Alias Nodes a concatenation of the children's
    content signatures (MD5 checksums), not a concatenation of the
    children's contents, to avoid using large amounts of memory during
    signature calculation.

  From Malte Helmert:

  - Fix a lot of typos in the man page and User's Guide.

  From Geoffrey Irving:
